--- a/CSS/style.css
+++ b/CSS/style.css
@@ -11,6 +11,11 @@
     height: 60px;
 }
 
+.upgrade--image{
+    width: 60px;
+    height: 60px;
+}
+
 .building--container{
     display:flex;    
     flex-direction: column;
@@ -33,6 +38,10 @@
 .building--button--container{
     display: flex;
     padding-right: 30px;
+}
+
+.upgrade--container{
+    display: flex;
 }
 
 
