--- a/CSS/style.css
+++ b/CSS/style.css
@@ -104,6 +104,29 @@
     grid-template-rows: 1fr 5fr 1fr; 
 }
 
+.stat--container{
+    display:flex; 
+    flex-direction: row; 
+}
+
+.progress--bar--container{
+    margin:10%;
+}
+
+
+.progress--bar--outline{
+    display: flex;
+    border: 8px solid black
+}
+
+.progress--bar{
+    width: 30%;
+    height: 50px;
+    background-color: green;
+}
+
+
+
 
 
 .cookie{
